# am-rust-full

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PHASE_4_COMPLETE.md  README.md  Trunk.toml  howto-test.md  index.html  index.scip  jina-embeddings.md  lbug-crate-windows.md
.kilo/: kilo.jsonc
.planning/execution/: README.md
fixtures/scip_calls_smoke/mini_rust_proj/: Cargo.toml  README.md
fixtures/scip_calls_smoke/mini_rust_proj/src/: lib.rs
scripts/: build_workspace_server.ps1  smoke_managed_backend.ps1  smoke_scip_calls.ps1  smoke_workspace_graph.ps1
src/: app.rs  app_main.rs  lib.rs  theme.rs
src/agent_panel/: mod.rs
src/api/: mod.rs
src/canvas/: camera.rs  card.rs  connector.rs  markdown_preview.rs  mod.rs  tools.rs
src/diagnostics_panel/: mod.rs
src/editor/: mod.rs
src/graph_view/: mod.rs
src/model/: agent.rs  canvas.rs  diagnostics.rs  graph.rs  mod.rs
src/query_shell/: mod.rs
src/repo_jina_lb/: .gitignore  AGENTS.md  README.md  calls_registry.rs  install.md  jina.rs  ladybug_writes.rs  mod.rs  parse.rs  scip_calls.rs
src/repo_jina_lb/standalone-pack/: .gitignore  AGENTS.md  Cargo.toml  README.md
src/repo_jina_lb/standalone-pack/src/: ids.rs  ladybug_writes.rs  lib.rs  main.rs  schema_ddl.rs  scip_calls.rs
src/server/: config.rs  lbug_shim.rs  main.rs  mod.rs  observability.rs  static_files.rs
src/server/routes/: agent.rs  boards.rs  diagnostics.rs  graph.rs  mod.rs  notes.rs  query.rs
src/server/services/: agent.rs  ladybug_query.rs  mod.rs  scope.rs
src/server/store/: attempt.rs  board.rs  git.rs  ladybug.rs  mod.rs  note.rs  vault.rs
src/sidebar/: mod.rs
static/: excalidraw-bridge.html
