[package]
name = "am-workspace"
version = "0.1.0"
edition = "2021"

[lib]
name = "am_workspace"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "workspace-server"
path = "src/server/main.rs"
required-features = ["server"]

[[bin]]
name = "workspace-app"
path = "src/app_main.rs"

[[bin]]
name = "jina-ladybug-repo-index"
path = "src/bin/jina_ladybug_repo_index.rs"
required-features = ["jina-ladybug-index"]

[[bin]]
name = "lbug-quick-audit"
path = "src/bin/lbug_quick_audit.rs"
required-features = ["ladybug"]

[features]
# `server`: Axum/Tokio/Git2 stack — not WASM-safe (pulls `mio`). Omit for Trunk/WASM (`--no-default-features --features egui`).
default = ["ladybug", "server"]
ladybug = ["dep:lbug"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:git2",
    "dep:uuid",
]
jina-ladybug-index = [
    "ladybug",
    "dep:clap",
    "dep:ignore",
    "dep:md-5",
    "dep:protobuf",
    "dep:reqwest",
    "dep:scip",
    "dep:sha2",
    "dep:tree-sitter",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
]
egui = [
    "dep:egui",
    "dep:eframe",
    "dep:ehttp",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
    "dep:parking_lot",
    "dep:uuid",
]

[dependencies]
axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "cors", "trace"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
lbug = { version = "0.16.1", optional = true }

# Frontend dependencies (gated behind egui feature)
egui = { version = "0.30", optional = true }
eframe = { version = "0.30", default-features = false, features = ["glow", "default_fonts"], optional = true }
ehttp = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
parking_lot = { version = "0.12", optional = true }

# Optional: Jina v4 → native Ladybug code graph (see `src/bin/jina_ladybug_repo_index.rs`).
clap = { version = "4", features = ["derive", "env"], optional = true }
ignore = { version = "0.4", optional = true }
md-5 = { version = "0.10", optional = true }
protobuf = { version = "3.7", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }
scip = { version = "0.7.1", optional = true }
sha2 = { version = "0.10", optional = true }
tree-sitter = { version = "0.24", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

# Used by the WASM entrypoint to resolve `#canvas` for `eframe::WebRunner::start`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "Window"] }

[dev-dependencies]
tempfile = "3"
