[package]
name = "jina-ladybug-repo-index"
version = "0.1.0"
edition = "2021"
description = "Jina embeddings v4 → Ladybug native Agentic Memory CODE_SCHEMA graph ingest"
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"

[lib]
name = "jina_ladybug_repo_index"
path = "src/lib.rs"

[[bin]]
name = "jina-ladybug-repo-index"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
lbug = "0.16.1"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
protobuf = "3.7"
scip = "0.7.1"
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
